Closed Bug 1566295 Opened 5 years ago Closed 5 years ago

Evernote Web Clipper (EWC) can't log in

Categories

(WebExtensions :: General, defect, P1)

70 Branch
defect

Tracking

(firefox-esr60 unaffected, firefox-esr68 unaffected, firefox68 unaffected, firefox69 unaffected, firefox70+ verified)

VERIFIED FIXED
mozilla70
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- unaffected
firefox68 --- unaffected
firefox69 --- unaffected
firefox70 + verified

People

(Reporter: cyanosis117+mozilla, Assigned: CuveeHsu)

References

()

Details

(Keywords: regression, Whiteboard: webext?)

Attachments

(3 files)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:70.0) Gecko/20100101 Firefox/70.0

Steps to reproduce:

Clicked on the Evernote Web Clipper (EWC) icon (elephant in profile), which has a red circle sumperimposed to indicate it is not logged in.


In an attempt to remedy the situation I have changed Content Blocking to 'Custom' and unchecked 'Cookies'. I have also added the following exceptions for cookies and site data:
https://www.evernote.com Allow
http://www.evernote.com Allow
https://evernote.com Allow
http://evernote.com Allow

Actual results:

A popup browser window appears (very briefly) which says "Web Clipper log in successful."

A small notification then appears in the bottom-right of the browser window that reads: "Evernote Web Clipper uses cookies to identify your account. Check your browser settings to make sure third-party cookies are accepted from Evernote. "

The red circle indicator remains on the EWC icon and I am still unable to activate clipping.

Expected results:

The popup browser window should have appeared and indicated log-in was successful, and then the red circle indidicator on the EWC icon should be gone and I should be able to use EWC to save web content to my Evernote.

Hi cnm,

I was able to reproduce the issue reported on the latest Nightly build 70.0a1 (2019-07-16) (64-bit) on Windows 10 and Ubuntu 18.
I'll add a product and component so the devs can take a look at it. If you think the components are not the correct ones, please feel free to change them.

Thanks for your report.

Status: UNCONFIRMED → NEW
Component: Untriaged → General
Ever confirmed: true
Product: Firefox → WebExtensions
Version: 70 Branch → Firefox 70

Release 68.0 (64-bit) not affected
Beta 69.0b4 (64-bit) not affected

Nightly 70.0a1 (2019-07-16) (64-bit) affected

Attached image Windows notification

I get this windows notification after I try to sign in and the window simply closes.

This is annoying, I can't use nightly daily :(

19:43.93 INFO: Using local file: /var/folders/m0/xs447pjj0vjb46n7s4f7sbwm0000gn/T/tmp2pEuvP/e97f23bfa99c-shippable--autoland--target.dmg (downloaded in background)
19:43.93 INFO: Running autoland build built on 2019-07-09 18:33:12.898000, revision e97f23bf
20:03.30 INFO: Launching /private/var/folders/m0/xs447pjj0vjb46n7s4f7sbwm0000gn/T/tmpUfMwj7/Firefox Nightly.app/Contents/MacOS/firefox
20:03.30 INFO: Application command: /private/var/folders/m0/xs447pjj0vjb46n7s4f7sbwm0000gn/T/tmpUfMwj7/Firefox Nightly.app/Contents/MacOS/firefox --allow-downgrade -foreground -profile /var/folders/m0/xs447pjj0vjb46n7s4f7sbwm0000gn/T/tmp0nOrJo.mozrunner
20:03.31 INFO: application_buildid: 20190709171237
20:03.31 INFO: application_changeset: e97f23bfa99cf7fb97fc2a176be4f2497ec19776
20:03.31 INFO: application_name: Firefox
20:03.31 INFO: application_repository: https://hg.mozilla.org/integration/autoland
20:03.31 INFO: application_version: 70.0a1
Was this inbound build good, bad, or broken? (type 'good', 'bad', 'skip', 'retry', 'back' or 'exit' and press Enter): good
20:50.41 INFO: Narrowed inbound regression window from [e4a2b09b, c6299be2] (5 builds) to [e97f23bf, c6299be2] (3 builds) (~1 steps left)
20:50.41 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=e97f23bfa99cf7fb97fc2a176be4f2497ec19776&tochange=c6299be2356cc2bb10f3e1e7e6f04ed2004585d3

20:50.41 INFO: Using local file: /var/folders/m0/xs447pjj0vjb46n7s4f7sbwm0000gn/T/tmp2pEuvP/62286ede9f12-shippable--autoland--target.dmg (downloaded in background)
20:50.42 INFO: Running autoland build built on 2019-07-09 18:36:22.204000, revision 62286ede
21:08.15 INFO: Launching /private/var/folders/m0/xs447pjj0vjb46n7s4f7sbwm0000gn/T/tmpJqOAU0/Firefox Nightly.app/Contents/MacOS/firefox
21:08.16 INFO: Application command: /private/var/folders/m0/xs447pjj0vjb46n7s4f7sbwm0000gn/T/tmpJqOAU0/Firefox Nightly.app/Contents/MacOS/firefox --allow-downgrade -foreground -profile /var/folders/m0/xs447pjj0vjb46n7s4f7sbwm0000gn/T/tmpQACKea.mozrunner
21:08.16 INFO: application_buildid: 20190709171348
21:08.16 INFO: application_changeset: 62286ede9f12840eb941fe849643448348704b51
21:08.17 INFO: application_name: Firefox
21:08.17 INFO: application_repository: https://hg.mozilla.org/integration/autoland
21:08.17 INFO: application_version: 70.0a1
Was this inbound build good, bad, or broken? (type 'good', 'bad', 'skip', 'retry', 'back' or 'exit' and press Enter): good
21:50.94 INFO: Narrowed inbound regression window from [e97f23bf, c6299be2] (3 builds) to [62286ede, c6299be2] (2 builds) (~1 steps left)
21:50.94 INFO: No more inbound revisions, bisection finished.
21:50.94 INFO: Last good revision: 62286ede9f12840eb941fe849643448348704b51
21:50.94 INFO: First bad revision: c6299be2356cc2bb10f3e1e7e6f04ed2004585d3
21:50.94 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=62286ede9f12840eb941fe849643448348704b51&tochange=c6299be2356cc2bb10f3e1e7e6f04ed2004585d3

I've tried to narrow down using mozregression.
Can someone help to take a look?

Flags: needinfo?(jmathies)

User
Push date [To Local] Changeset Patch author — Commit message
juhsu@mozilla.com
Tue Jul 09 17:16:50 2019 +0000 c6299be2356cc2bb10f3e1e7e6f04ed2004585d3 Junior Hsu — Bug 1424076 - P4 Update sendBeacon origin header test r=ckerschb
f567bf2904c94e5a20a794f99920cc24b33da419 Junior Hsu — Bug 1424076 - P3 Enable testing Origin header in wpt r=Ehsan
6127a13715c9da590bbda3c5156738b6d61d64d7 Junior Hsu — Bug 1424076 - P2 adjust Origin header comparison for POST request r=Honza
743605a9b0ac2d01bd8e4420012d085ab49cd6c0 Junior Hsu — Bug 1424076 - P1 send Origin headers for all eligible requests r=ckerschb

Hey Junior,
Can you help to check this? It breaks evernote web clipboard extension. I'm simply a normal Nightly user... And it effects my daily life.

Flags: needinfo?(juhsu)

[Tracking Requested - why for this release]:

Regression range points to some networking work (bug 1424076 - enable network.http.sendOriginHeader by default.) This appears to have broken a popular web extension's login sequence.

Flags: needinfo?(jmathies)
Priority: -- → P1
Whiteboard: webext?

Sometimes we don't have origin like OCSP requests, or a fetch issues from web extension.
We should not send Origin:

Spec doesn't specify how to treat other protocol like moz-extension.
IMO we should also prevent sending Origin: to keep web-compat.

Thanks for reporting this and using mozregression.

FWIW, setting network.http.sendOriginHeader to 0 or 1 is a work around.

Flags: needinfo?(juhsu)

(In reply to Junior [:junior] from comment #12)

Thanks for reporting this and using mozregression.

FWIW, setting network.http.sendOriginHeader to 0 or 1 is a work around.

Yes, setting that pref to 0 could fix this problem.

Pushed by juhsu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c4980c083852
Do not send Origin: if we can't extract a valid origin r=ckerschb,tnguyen
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70
Assignee: nobody → juhsu

Verified the fix using the latest Nightly (70.0a1/20190901214807) under Windows 10 Pro 64-bit and macOS High Sierra 10.13.6.

Users can properly log in into Evernote Web Clipper (the red circle indicator on the EWC icon disappears) and web content can be saved in Evernote, confirming the fix.

Status: RESOLVED → VERIFIED
Version: Firefox 70 → 70 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: