Bug 1566295 - Do not send Origin: if we can't extract a valid origin r=ckerschb,tnguyen

Sometimes we don't have origin like OCSP requests, or a fetch issues from web extension.
We should not send `Origin:`

Spec doesn't specify how to treat other protocol like moz-extension.
IMO we should also prevent sending `Origin:` to keep web-compat.

Differential Revision: https://phabricator.services.mozilla.com/D39595